src/scu/snapshots/bw_r_drivers_tc37x__scu__wdt__tests__clear_then_set_safety_endinit_inline.snap
---
source: src/scu/wdt.rs
assertion_line: 221
expression: report.take_log()
---
r    0xF00362A8 04 0x00000003
w    0xF00362A8 04 0x000000FD
w    0xF00362A8 04 0x000000FE
r    0xF00362A8 04 0x00000002
w    0xF00362A8 04 0x000000FD
w    0xF00362A8 04 0x000000FF
