src/scu/snapshots/bw_r_drivers_tc37x__scu__wdt__tests__disable_safety_watchdog.snap
---
source: src/scu/wdt.rs
assertion_line: 260
expression: report.take_log()
---
r    0xF00362A8 04 0x00000003
w    0xF00362A8 04 0x000000FD
w    0xF00362A8 04 0x000000FE
r    0xF00362AC 04 0x00000000
w    0xF00362AC 04 0x00000008
r    0xF00362A8 04 0x00000002
w    0xF00362A8 04 0x000000FD
w    0xF00362A8 04 0x000000FF
