src/scu/snapshots/bw_r_drivers_tc37x__scu__wdt__tests__set_cpu_endinit_inline.snap
---
source: src/scu/wdt.rs
assertion_line: 170
expression: report.take_log()
---
r    0xF003624C 04 0x00000003
w    0xF003624C 04 0x000000FD
w    0xF003624C 04 0x000000FF
